--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-index.html
+<!DOCTYPE html>
+<html>
+<head>
+	<title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    </title>
+</head>
+<body>
+<div id="cont" class="container">
+	
+</div>
+<script type="text/javascript" src="script.js"></script>
+</body>
+</html>
